Fixed the page title spacing

--- a/drupal/sites/all/themes/tp4/sass/page/_layout.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_layout.scss
@@ -258,7 +258,9 @@ body {
 .node-type-takepart-page,
 .page-taxonomy-term,
 .node-type-profile,
-.node-type-openpublish-photo-gallery {
+.page-flashcards,
+.node-type-openpublish-photo-gallery,
+.page-search {
   #block-boxes-ga-mobile-320x50-relative {
     margin-bottom: 0
   }
